--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ JWT_SECRET_FOR_VERIFY=kenny
 
 
 SERVICE=gmail
-EMAIL_USER=kenny.truong.developer@gmail.com
-EMAIL_PASS=pmdv vohg jfcn vykv
+EMAIL_USER=thinhnhqpd09557@fpt.edu.vn
+EMAIL_PASS=nczx imyi gmnh vuwl
 HOST=smtp.gmail.com
 EMAIL_PORT=465
 
