--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Dashtar",
   "license": "ISC",
   "dependencies": {
+    "@payos/node": "^1.0.10",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
